05 April 2005 - Added 'lsb-flexctrl','lsb-allianz', 'lsb-ricis'
12 May 2005 - Added 'lsb-ciphire', 'lsb-ciphire-gw', 'lsb-ciphire-proxy', 
		'lsb-srvadmin', 'lsb-dcf', 'lsb-pediags', 'lsb-armtech', 
		'lsb-galaxy'
13 July 2005 - Added 'lsb-securetransport'
25 July 2005 - Added 'lsb-dice', 'lsb-centrifydc'
25 August 2005 - Added 'lsb-vista', 'lsb-keep', 'lsb-crms', 'lsb-appgen', 'lsb-idxpki', 'lsb-lucent.com-lmpi'
17 October 2005 - Added 'lsb-thermeon', 'lsb-openipmi'
01 March 2006 - Added 'lsb-mandate', 'lsb-mandateip', 'lsb-vvrts', 'lsb-capaccess', 'lsb-a11y'
10 May 2006 - Added 'lsb-vvrtspg', 'lsb-poco', 'lsb-vector', 'lsb-leeuwenhoek',
		'lsb-skinsight', 'lsb-daltoneyes'
21 August 2006 - Added 'lsb-lsf', 'lsb-wavelink'
07 September 2006 - Added 'lsb-netvision', 'lsb-netvsn'
18 September 2006 - Added 'lsb-openxdas'
27 October 2006 - Added 'lsb-ascp, 'lsb-asconnect', 'lsb-qtopia', 'ivman'
29 November 2006 - Added 'lsb-coz'
17 April 2007 - Added 'lsb-zyrossdc'
24 July 2007 - Added 'lsb-asdis', 'lsb-callweaver'
09 October 2007 - Added 'lsb-nps'
04 January 2008 - Added 'lsb-wsf_c', 'lsb-wsas', 'lsb-esb', 'lsb-mashup', 'lsb-is', 'lsb-registry'
05 March 2008 - Added 'lsb-synchronet', 'lsb-chssbase', 'lsb-chssmailprimary',
			'lsb-chssmailsupplemental', 'lsb-chsswww', 'lsb-chsscrm', 'lsb-chssbilling'
			'lsb-chssticketing', 'lsb-chsseucp', 'lsb-chssextsync',
			'lsb-chssgroupware', 'lsb-mbc'

23 April 2008 - Added 'lsb-zenoss', 'lsb-nerds', 'lsb-opal',
                        'lsb-gsrunprocessor', 'lsb-gsreporter', 'lsb-gsrunprocessormanager',
                        'lsb-gsrunbrowser', 'lsb-gssupporttool'

15 April 2010 - Added 'lsb-vmlvtl', 'lsb-vmlvsm', 'lsb-vmlvsa', 'lsb-vmlcos' 
                (xfer from Google docs entry of 1/6/2010)
15 April 2010 - Added 'lsb-dcfs' 
                (xfer from Google docs entry of 3/3/2010)
29 May 2010 - Added 'lsb-rob'
11 Jul 2011 - Added lsb-dam, lsb-dam3
11 Aug 2011 - Change contact email for Netezza
