@@ -40,7 +40,7 @@ Note: It <i>is</i> legal to have more than one hyphen in your package name, but 
 See the <b>Software Installation</b> chapter of the LSB specification.
 
 <UL>
-<LI><A HREF="packages.txt">Current LSB Package Name List</A> 11 Aug 2011
+<LI><A HREF="packages.txt">Current LSB Package Name List</A> 20 Jun 2012
 <A HREF="CHANGELOG">CHANGELOG</A>
 </UL>
 
@@ -62,7 +62,7 @@ This web page is hosted by <A HREF="http://www.kernel.org/"><font color="#FFFFFF
 </td>
 <td align=right width="33%">
 <FONT SIZE=-1 color="#FFFFFF">
-Last Modified: 11 Aug 2011
+Last Modified: 20 Jun 2012
 </FONT>
 </td>
 <tr>
