@@ -76,4 +76,5 @@
 29 May 2010 - Added 'lsb-rob'
 11 Jul 2011 - Added lsb-dam, lsb-dam3
 11 Aug 2011 - Change contact email for Netezza
+20 Jun 2012 - Added lsb-adocusflexlm
 
